# Transformer

./: CMakeLists.txt  main.cpp  math.cpp  math.h  matrix.cpp  matrix.h  vector.h
include/: math.h  math_utils.h  matrix.h  matrix_ops.h  vector.h
src/: layer.cpp  main.cpp
